--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -13,6 +13,9 @@
   "about": {
     "message": "about"
   },
+  "backup": {
+    "message": "backup"
+  },
   "help": {
     "message": "help"
   },
@@ -21,5 +24,14 @@
   },
   "version": {
     "message": "version"
+  },
+  "text": {
+    "message": "text"
+  },
+  "import": {
+    "message": "import"
+  },
+  "export": {
+    "message": "export"
   }
 }
