feat: 新增备份功能

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -29,9 +29,9 @@
     "message": "text"
   },
   "import": {
-    "message": "import"
+    "message": "import config"
   },
   "export": {
-    "message": "export"
+    "message": "export config"
   }
 }
